# enli-bot

./: .env.template  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: bot.py
src/commands/: discord.py  jokes.py
